--- a/InventoryManagementSystem/PresentationApi/appsettings.json
+++ b/InventoryManagementSystem/PresentationApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=TGS147\\SQLEXPRESS;Database=InventoryManagementSystemMainPart;Trusted_Connection=True;Encrypt=False;MultipleActiveResultSets=True;"
+  },
   "AllowedHosts": "*"
 }
