--- a/InventoryManagementSystem/PresentationApi/appsettings.json
+++ b/InventoryManagementSystem/PresentationApi/appsettings.json
@@ -1,9 +1,31 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "None"
     }
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "Enrich": [ "FromLogContext" ],
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/inventory-api-.log",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=TGS147\\SQLEXPRESS;Database=InventoryManagementSystemMain2;Trusted_Connection=True;Encrypt=False;MultipleActiveResultSets=True;"
